feat: add mongodb, correct swagger, add all words in bd
